plugins {
    id "com.vanniktech.dependency.graph.generator" version "0.5.0"
}
apply plugin: 'java'
apply plugin: 'idea'

idea {
    module {
        downloadJavadoc = true
    }
}

group = 'rr.industries'
version = 'master'

sourceCompatibility = 1.11
targetCompatibility = 1.11
tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
}

repositories {
     jcenter()
    repositories {
        maven { url 'https://jitpack.io' }
    }
     mavenCentral()
}

dependencies {
    // Youtube Library
    compile group: 'com.sedmelluq', name: 'lavaplayer', version:'1.3.7'

    // SQLite Database Driver
    compile group: 'org.xerial', name: 'sqlite-jdbc', version:'3.8.11.2'

    // Http Server
    compile group: 'com.sparkjava', name: 'spark-core', version:'2.7.2'

    // Http Client
    compile group: 'com.mashape.unirest', name: 'unirest-java', version:'1.4.9'

    // Discord API
    compile 'com.discord4j.discord4j:discord4j-core:3.0.0.M4'

    // File Download
    compile group: 'commons-io', name: 'commons-io', version:'2.6'

    // Json Library
    compile group: 'com.google.code.gson', name: 'gson', version:'2.7'

    // Logging API
    compile group: 'ch.qos.logback', name: 'logback-classic', version:'1.2.3'

    // Parsing Links
    compile group: 'com.twitter', name: 'twitter-text', version:'1.14.3'
    
    //Escape HTML
    compile group: 'org.apache.commons', name:'commons-text', version:'1.6'

    // SQL Abstraction
    compile group: 'org.jooq', name: 'jooq', version:'3.10.1'
    compile group: 'org.jooq', name: 'jooq-meta', version:'3.10.1'
    compile group: 'org.jooq', name: 'jooq-codegen', version:'3.10.1'

    compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'

}

task copyToLib(type: Copy) {
    jar.dependsOn copyToLib
    into "$buildDir/output/lib"
    from configurations.runtime
}

jar {
    manifest {
        attributes(
                'Class-Path': configurations.compile.collect { "lib/" + it.getName() }.join(' '),
                'Main-Class': 'rr.industries.Launcher'
        )
    }
}
